@@ -4350,7 +4350,7 @@
       <city>
        <_name>Gunnison</_name>
        <location>
-         <_name>>Crested Butte Regional Airport</_name>
+         <_name>Crested Butte Regional Airport</_name>
          <code>KGUC</code>
          <zone>COZ012</zone>
          <radar>den</radar>
@@ -20181,13 +20181,38 @@
   <country>
     <_name>Bosnia-Herzegovina</_name>
     <location>
+      <_name>Banja Luka</_name>
+      <code>LQBK</code>
+      <coordinates>44-47N 017-13E</coordinates>
+    </location>
+    <location>
+      <_name>Bihac</_name>
+      <code>LQBI</code>
+      <coordinates>44-49N 015-53E</coordinates>
+    </location>
+    <location>
       <_name>Livno</_name>
       <code>LQLV</code>
       <coordinates>43-50N 017-01E</coordinates>
     </location>
     <location>
+      <_name>Mostar</_name>
+      <code>LQMO</code>
+      <coordinates>43-21N 017-48E</coordinates>
+    </location>
+    <location>
       <_name>Sarajevo</_name>
       <code>LQSA</code>
+    </location>
+    <location>
+      <_name>Sarajevo/Butmir</_name>
+      <code>LQSA</code>
+      <coordinates>43-49N 018-20E</coordinates>
+    </location>
+    <location>
+      <_name>Tuzla</_name>
+      <code>LQTZ</code>
+      <coordinates>44-33N 018-42E</coordinates>
     </location>
   </country>
   <country>
@@ -20304,7 +20329,7 @@
       <coordinates>45-13N 014-35E</coordinates>
     </location>
     <location>
-      <_name>Slavonski</_name>
+      <_name>Slavonski Brod</_name>
       <code>LDOR</code>
       <coordinates>45-10N 018-00E</coordinates>
     </location>
@@ -21670,29 +21695,14 @@
   <country>
     <_name>Serbia and Montenegro</_name>
     <location>
-      <_name>Banja Luka</_name>
-      <code>LQBK</code>
-      <coordinates>44-47N 017-13E</coordinates>
-    </location>
-    <location>
       <_name>Beograd/Surcin</_name>
       <code>LYBE</code>
       <coordinates>44-49N 020-17E</coordinates>
     </location>
     <location>
-      <_name>Bihac</_name>
-      <code>LQBI</code>
-      <coordinates>44-49N 015-53E</coordinates>
-    </location>
-    <location>
-      <_name>Camp Bondsteel</_name>
+      <_name>Camp Bondsteel (Urosevac)</_name>
       <code>KQUK</code>
       <coordinates>42-35N 021-23E</coordinates>
-    </location>
-    <location>
-      <_name>Mostar</_name>
-      <code>LQMO</code>
-      <coordinates>43-21N 017-48E</coordinates>
     </location>
     <location>
       <_name>Nis</_name>
@@ -21705,7 +21715,7 @@
       <coordinates>42-22N 019-15E</coordinates>
     </location>
     <location>
-      <_name>Podgorica Titograd</_name>
+      <_name>Podgorica</_name>
       <code>LYPG</code>
       <coordinates>42-26N 019-17E</coordinates>
     </location>
@@ -21715,24 +21725,9 @@
       <coordinates>42-39N 021-09E</coordinates>
     </location>
     <location>
-      <_name>Sarajevo/Butmir</_name>
-      <code>LQSA</code>
-      <coordinates>43-49N 018-20E</coordinates>
-    </location>
-    <!-- LYTV is from METAR list; LYTU is from previous revision -->
-    <location>
       <_name>Tivat</_name>
       <code>LYTV</code>
       <coordinates>42-24N 018-44E</coordinates>
-    </location>
-    <location>
-      <_name>Tivat</_name>
-      <code>LYTU</code>
-    </location>
-    <location>
-      <_name>Tuzla</_name>
-      <code>LQTZ</code>
-      <coordinates>44-33N 018-42E</coordinates>
     </location>
     <location>
       <_name>Vrsac</_name>
