@@ -1,3 +1,9 @@
+2004-12-04  Danilo Šegan  <dsegan@gmx.net>
+
+	* Locations.xml.in: Clean up Serbia and Montenegro entries, move
+	BIH cities into Bosnia and Herzegovina section, fix "Slavonski"
+	(Croatia) to be "Slavonski Brod".  Also, s/>>/>/.
+
 2004-11-30  James Henstridge  <james@jamesh.id.au>
 
 	* gweather-xml.c (gweather_xml_load_locations): when starting to
